# gitveil

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: release.sh
src/: cli.rs  config.rs  constants.rs  error.rs  main.rs
src/commands/: add_gpg_user.rs  config.rs  export_key.rs  init.rs  lock.rs  ls_gpg_users.rs  mod.rs  rm_gpg_user.rs  status.rs  unlock.rs
src/crypto/: aes_ctr.rs  hmac.rs  mod.rs  random.rs
src/filter/: clean.rs  diff.rs  mod.rs  smudge.rs
src/git/: checkout.rs  config.rs  mod.rs  repo.rs
src/gpg/: import.rs  mod.rs  operations.rs
src/key/: entry.rs  format.rs  key_file.rs  mod.rs
tests/: cross_compat.rs  gpg_integration.rs  integration.rs
